public class AnimationString
{
    internal static string moveBool = "move";
    internal static string isGroundBool = "isGround";
    internal static string jumpTrigger = "jump";
    internal static string attackTrigger = "attack";
    internal static string isHit = "isHit";
    internal static string canMove = "canMove";
    internal static string attackCoolDown = "attackCoolDown";
    internal static string hasTarget = "HasTarget";
}